# sarala

./: .gitignore  README.md  RELEASING.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml  snap.yml
Casks/: sarala.rb
flatpak/: README.md  cargo-sources.json  gen-sources.sh  io.github.solancer.Sarala.desktop  io.github.solancer.Sarala.metainfo.xml  io.github.solancer.Sarala.yml  node-sources.json  package-lock.json
scripts/: release.sh
snap/: snapcraft.yaml
src/: App.tsx  autosave.ts  blockselect.ts  commands.ts  d2.ts  emoji.ts  export.ts  fonts.ts  highlighter.ts  imageactions.ts  images.ts  index.tsx  langicons.ts  livesource.ts  markdown.ts  menudata.ts  menuicons.ts  mermaid.ts  platform.ts  richpaste.ts  search.ts  settings.ts  shortcuts.ts  slug.ts  store.ts  tabletools.ts  types.d.ts  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  menu.rs
src/components/: AboutModal.tsx  Block.tsx  CodeLangPicker.tsx  CommandPalette.tsx  ConflictBanner.tsx  D2SizeControl.tsx  Editor.tsx  EditorContextMenu.tsx  ExportHtmlDialog.tsx  FindBar.tsx  ImageContextMenu.tsx  ImageHoverTools.tsx  MenuBar.tsx  PaletteSwitcher.tsx  PandocDownloadModal.tsx  QuickOpen.tsx  SearchPanel.tsx  SettingsModal.tsx  Sidebar.tsx  SourceView.tsx  StatusBar.tsx  TableDialog.tsx  TableToolbar.tsx  UpdateModal.tsx
src/styles/: app.css  export.css
tests/: e2e-mermaid.mjs  e2e-reveal.mjs  livesource.test.mjs
