[package]
name = "sarala"
version = "0.1.0"
description = "A seamless WYSIWYG Markdown editor"
authors = ["Srinivas Gowda"]
license = "GPL-3.0-or-later"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2.3.2"
regex = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
