[package]
name = "sarala"
version = "0.2.0"
description = "A seamless WYSIWYG Markdown editor"
authors = ["Srinivas Gowda"]
license = "GPL-3.0-or-later"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2.3.2"
regex = "1"
notify = "6"
notify-debouncer-mini = "0.4"
encoding_rs = "0.8"
chardetng = "0.1"
font-kit = "0.14"
base64 = "0.22"

# Auto-updater. Desktop-only (the plugin doesn't build for mobile); Sarala has no
# mobile target, but the cfg gate keeps that true if one is ever added.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
